--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <title>Nathan Garret's Digital CV</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <header>
+      <nav></nav>
+      <h1>Hello World</h1>
+    </header>
   </body>
 </html>
