Navigation and hero section

--- a/index.html
+++ b/index.html
@@ -1,21 +1,58 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title></title>
-    <meta name="description" content="" />
+    <meta name="description" content="Nathan Garrett's digital CV." />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="src/css/general.css" />
     <link rel="stylesheet" href="src/css/styles.css" />
-    <script src="src/js/script.js" async defer></script>
+    <script defer src="src/js/script.js"></script>
     <title>Nathan Garret's Digital CV</title>
   </head>
   <body>
-    <header>
-      <nav></nav>
-      <h1>Hello World</h1>
+    <header class="header">
+      <a class="header-title" href="#"><p>Nathan Garrett's Digital CV</p></a>
+      <nav class="main-nav">
+        <ul class="main-nav-list">
+          <li><a class="nav-list-item" href="#">Personal Statement</a></li>
+          <li><a class="nav-list-item" href="#">Technical Skills</a></li>
+          <li><a class="nav-list-item" href="#">Qualifications</a></li>
+          <li><a class="nav-list-item" href="#">Work History</a></li>
+          <li><a class="nav-list-item" href="#">Project Portfolio</a></li>
+        </ul>
+      </nav>
     </header>
+    <main>
+      <section class="section-hero">
+        <div class="hero">
+          <div class="hero-text">
+            <h1 class="primary-heading">Looking for a new career</h1>
+            <p class="hero-description">
+              I am looking for a position to enable me to develop my career
+              within the IT Industry. Willing to learn new frameworks, business
+              concepts and keen to gain experience. I am passionate about IT and
+              learning and want to use this in my career, whilst working as a
+              team to achieve business goals.
+            </p>
+          </div>
+          <div class="hero-img-box">
+            <img
+              class="hero-img"
+              src="src/img/computers.jpg"
+              alt="A computer on a desk with three monitors and a keyboard"
+            />
+          </div>
+        </div>
+      </section>
+      <section class="section-personal"></section>
+    </main>
   </body>
 </html>
