--- a/index.html
+++ b/index.html
@@ -22,9 +22,15 @@
       <a class="header-title" href="#"><p>Nathan Garrett's Digital CV</p></a>
       <nav class="main-nav">
         <ul class="main-nav-list">
-          <li><a class="nav-list-item" href="#">Personal Statement</a></li>
-          <li><a class="nav-list-item" href="#">Technical Skills</a></li>
-          <li><a class="nav-list-item" href="#">Qualifications</a></li>
+          <li>
+            <a class="nav-list-item" href="#personal">Personal Statement</a>
+          </li>
+          <li>
+            <a class="nav-list-item" href="#technical">Technical Skills</a>
+          </li>
+          <li>
+            <a class="nav-list-item" href="#qualification">Qualifications</a>
+          </li>
           <li><a class="nav-list-item" href="#">Work History</a></li>
           <li><a class="nav-list-item" href="#">Project Portfolio</a></li>
         </ul>
@@ -47,12 +53,123 @@
             <img
               class="hero-img"
               src="src/img/computers.jpg"
-              alt="A computer on a desk with three monitors and a keyboard"
+              alt="A computer on a desk with three monitors, a keyboard and mouse"
             />
           </div>
         </div>
       </section>
-      <section class="section-personal"></section>
+      <section class="section-personal" id="personal">
+        <div class="container">
+          <h2 class="secondary-heading">Personal Statement</h2>
+          <p class="personal-text">
+            Having graduated with a BSc (Hons) in Computing and Internet
+            Technology, I am now looking for a position to enable me to develop
+            my career with the IT Industry. The skills I have acquired during my
+            degree along with online courses have given me a foundation which I
+            want to build upon and further my knowledge within this challenging
+            industry. I am willing to learning new frameworks, business concepts
+            and keen to gain experience within an IT related field.
+            Unfortunately, due to the pandemic I was unable to complete any work
+            experience during my degree, but since completing my degree, I have
+            undertaken online courses to help improve upon my existing skills
+            and expand my skill set. I am passionate about IT and learning and
+            want to use this in my career as a web/software developer, whilst
+            working as a team to achieve business goals.
+          </p>
+        </div>
+      </section>
+      <section class="section-technical" id="technical">
+        <div class="technical">
+          <div class="technical-text">
+            <h2 class="secondary-heading">Technical Skills</h2>
+            <ul class="technical-description">
+              <li class="technical-list-item">
+                Competent with using windows-based systems.
+              </li>
+              <li class="technical-list-item">
+                Competent using HTML5, CSS3 and JavaScript.
+              </li>
+              <li class="technical-list-item">
+                SQL and developing relational databases.
+              </li>
+              <li class="technical-list-item">
+                Understanding of software development lifecycles.
+              </li>
+              <li class="technical-list-item">
+                Understanding of design patterns (I.e., SOLID).
+              </li>
+              <li class="technical-list-item">
+                Proficient using Microsoft Office 365 including Excel, Visio and
+                Word.
+              </li>
+            </ul>
+          </div>
+          <div class="hero-img-box">
+            <img
+              class="hero-img"
+              src="src/img/laptop.jpg"
+              alt="A computer on a desk with three monitors, a keyboard and mouse"
+            />
+          </div>
+        </div>
+      </section>
+      <section class="section-qualification" id="qualification">
+        <div class="container">
+          <h2 class="secondary-heading">Qualifications</h2>
+          <div class="tabs-container">
+            <button
+              class="btn tab-1 qualifications-tab qualification-tab-active"
+              data-tab="1"
+            >
+              GCSE
+            </button>
+            <button class="btn tab-2 qualifications-tab" data-tab="2">
+              A-Levels
+            </button>
+            <button class="btn tab-3 qualifications-tab" data-tab="3">
+              Degree
+            </button>
+            <button class="btn tab-4 qualifications-tab" data-tab="4">
+              Other
+            </button>
+          </div>
+          <div
+            class="qualification-content qualification-content-1 qualification-content-active"
+          >
+            <span>2002-2007</span>
+            <h3 class="tertiary-heading">The king Alfred's School</h3>
+            <p>
+              History (A), Mathematics (B), Statistics (B), Science: Double
+              Award (BB), Design and Technology (B), Media Studies (B), English
+              (C), Business Studies and Economics (C), ICT (C)
+            </p>
+          </div>
+          <div class="qualification-content qualification-content-2">
+            <span>2007-2009</span>
+            <h3 class="tertiary-heading">The king Alfred's School</h3>
+            <p>
+              History (C), Business Studies and Economics (D), Applied ICT (D)
+            </p>
+          </div>
+          <div class="qualification-content qualification-content-3">
+            <span>2018-2021</span>
+            <h3 class="tertiary-heading">University Centre Somerset</h3>
+            <p>
+              BSC (Hons) Computing and Internet Technologies, Second Class
+              (Upper division)
+            </p>
+          </div>
+          <div class="qualification-content qualification-content-4">
+            <span class="span-hidden">whitespace</span>
+            <h3 class="tertiary-heading">Other Qualifications</h3>
+            <p>
+              AI-900: Microsoft Azure AI Fundamentals Certification Full UK
+              <br />
+              Driving License
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
