--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
           <li>
             <a class="nav-list-item" href="#qualification">Qualifications</a>
           </li>
-          <li><a class="nav-list-item" href="#">Work History</a></li>
-          <li><a class="nav-list-item" href="#">Project Portfolio</a></li>
+          <li><a class="nav-list-item" href="#work">Work History</a></li>
+          <li>
+            <a class="nav-list-item" href="#project">Project Portfolio</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -92,6 +94,7 @@
               <li class="technical-list-item">
                 SQL and developing relational databases.
               </li>
+              <li class="technical-list-item">GIT</li>
               <li class="technical-list-item">
                 Understanding of software development lifecycles.
               </li>
@@ -136,8 +139,8 @@
           <div
             class="qualification-content qualification-content-1 qualification-content-active"
           >
-            <span>2002-2007</span>
-            <h3 class="tertiary-heading">The king Alfred's School</h3>
+            <span>2002 - 2007</span>
+            <h3 class="tertiary-heading">The King Alfred's School</h3>
             <p>
               History (A), Mathematics (B), Statistics (B), Science: Double
               Award (BB), Design and Technology (B), Media Studies (B), English
@@ -145,14 +148,14 @@
             </p>
           </div>
           <div class="qualification-content qualification-content-2">
-            <span>2007-2009</span>
-            <h3 class="tertiary-heading">The king Alfred's School</h3>
+            <span>2007 - 2009</span>
+            <h3 class="tertiary-heading">The King Alfred's School</h3>
             <p>
               History (C), Business Studies and Economics (D), Applied ICT (D)
             </p>
           </div>
           <div class="qualification-content qualification-content-3">
-            <span>2018-2021</span>
+            <span>2018 - 2021</span>
             <h3 class="tertiary-heading">University Centre Somerset</h3>
             <p>
               BSC (Hons) Computing and Internet Technologies, Second Class
@@ -170,6 +173,110 @@
           </div>
         </div>
       </section>
+      <section class="section-work" id="work">
+        <div class="container">
+          <h2 class="secondary-heading">Work History</h2>
+          <div class="card-container">
+            <div class="card">
+              <span class="work-year">2007 - 03/2020</span>
+              <h3 class="tertiary-heading title-color">The Artful Dodger</h3>
+              <p class="work-job">Kitchen Staff</p>
+              <ul class="work-list">
+                <li>
+                  Food preparation to assist the cook to speed up the completion
+                  of customer orders.
+                </li>
+                <li>Covered the cook when they took a break.</li>
+                <li>Served food to customers in a timely manner.</li>
+                <li>
+                  Communicated any delays to waiting staff so they could inform
+                  customers.
+                </li>
+                <li>
+                  Kept work area clean and tidy to comply with health and
+                  hygiene.
+                </li>
+                <li>
+                  Checked stock on delivery to ensure correct stock was
+                  delivered.
+                </li>
+              </ul>
+            </div>
+            <div class="card">
+              <span class="work-year">05/2021 - Present</span>
+              <h3 class="tertiary-heading title-color">The Front Parlour</h3>
+              <p class="work-job">Kitchen Staff</p>
+              <ul class="work-list">
+                <li>
+                  Food preparation to assist the cook to speed up the completion
+                  of customer orders.
+                </li>
+                <li>Served food to customers in a timely manner.</li>
+                <li>
+                  Kept work area clean and tidy to comply with health and
+                  hygiene.
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section-project" id="project">
+        <div class="container">
+          <h2 class="secondary-heading">Project Portfolio</h2>
+          <div class="card-container">
+            <div class="card project-card">
+              <img
+                class="project-img"
+                src="src/img/omnifood.PNG"
+                alt="Omnifood website"
+              />
+              <h3 class="tertiary-heading project-title">Omnifood</h3>
+              <p class="project-text">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Tenetur sunt nostrum repellat optio asperiores provident esse
+                quisquam laboriosam, dolores corrupti vitae recusandae
+                repellendus? Sunt consequuntur et placeat odit pariatur minima?
+              </p>
+              <div class="project-links">
+                <a class="project-link" href="#">GitHub</a>
+                <a
+                  class="project-link"
+                  href="https://nathans-portfolio-project-omnifood.netlify.app/"
+                  target="_blank"
+                >
+                  Omnifood
+                </a>
+              </div>
+            </div>
+            <div class="card project-card">
+              <img
+                class="project-img"
+                src="src/img/forkify.PNG"
+                alt="Omnifood website"
+              />
+              <h3 class="tertiary-heading project-title">Forkify</h3>
+              <p class="project-text">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Tenetur sunt nostrum repellat optio asperiores provident esse
+                quisquam laboriosam, dolores corrupti vitae recusandae
+                repellendus? Sunt consequuntur et placeat odit pariatur minima?
+              </p>
+              <div class="project-links">
+                <a class="project-link" href="#">GitHub</a>
+                <a
+                  class="project-link"
+                  href="https://nathans-fortify-portfolio-project.netlify.app/"
+                  target="_blank"
+                >
+                  Forkify
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+    <footer class="footer"></footer>
   </body>
 </html>
