Final css styles and github links

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 of JavaScript.
               </p>
               <div class="project-links">
-                <a class="project-link" href="#">GitHub</a>
+                <a class="project-link" href="https://github.com/nathan-garrett/omnifood-project">GitHub</a>
                 <a
                   class="project-link"
                   href="https://nathans-portfolio-project-omnifood.netlify.app/"
@@ -275,7 +275,7 @@
                 creating your own.
               </p>
               <div class="project-links">
-                <a class="project-link" href="#">GitHub</a>
+                <a class="project-link" href="https://github.com/nathan-garrett/forkify-portfolio-project">GitHub</a>
                 <a
                   class="project-link"
                   href="https://nathans-fortify-portfolio-project.netlify.app/"
