updated content text in personal statement  technical and  work history

--- a/index.html
+++ b/index.html
@@ -78,19 +78,10 @@
         <div class="container">
           <h2 class="secondary-heading">Personal Statement</h2>
           <p class="personal-text">
-            Having graduated with a BSc (Hons) in Computing and Internet
-            Technology, I am now looking for a position to enable me to develop
-            my career with the IT Industry. The skills I have acquired during my
-            degree along with online courses have given me a foundation which I
-            want to build upon and further my knowledge within this challenging
-            industry. I am willing to learning new frameworks, business concepts
-            and keen to gain experience within an IT related field.
-            Unfortunately, due to the pandemic I was unable to complete any work
-            experience during my degree, but since completing my degree, I have
-            undertaken online courses to help improve upon my existing skills
-            and expand my skill set. I am passionate about IT and learning and
-            want to use this in my career as a web/software developer, whilst
-            working as a team to achieve business goals.
+            Having graduated with a BSc (Hons) in Computing and Internet Technology with a 2-1, I am looking for a position to enable me to further my career and enter the IT Industry with the goal of becoming a software developer. 
+            I acquired several skills during my degree these have given me a solid foundation from which I want to build upon. 
+            Post graduating, I have completed online courses to learn new skills and techniques for HTML, CSS3 and JavaScript. 
+            I have a keen interest in learning other frameworks, such as React and Sass. I am passionate about IT and willing to put in the time and effort to pursue my goals and make a positive impact within the business environment. 
           </p>
         </div>
       </section>
@@ -98,29 +89,29 @@
         <div class="technical">
           <div class="technical-text">
             <h2 class="secondary-heading">Technical Skills</h2>
+            <p class="personal-text">I gained experience with these technologies, practices, and principles:</p>
             <ul class="technical-description">
               <li class="technical-list-item">
-                Competent with using windows-based systems.
+                C# programming and ASP.NET MVC
               </li>
               <li class="technical-list-item">
-                Competent using HTML5, CSS3 and JavaScript.
+                SQL programming and relational database development
               </li>
               <li class="technical-list-item">
-                Previous experience with C# and ASP.NET.
+                HTML5, CSS3 and JavaScript 
               </li>
               <li class="technical-list-item">
-                Previous experience SQL and relational databases.
-              </li>
-              <li class="technical-list-item">GIT.</li>
-              <li class="technical-list-item">
-                Understanding of software development lifecycles.
+                WordPress
               </li>
               <li class="technical-list-item">
-                Understanding of design patterns.
+                Version control using GIT and GitHub
+                </li>
+              <li class="technical-list-item">
+                Software development lifecycles 
               </li>
               <li class="technical-list-item">
-                Proficient using Microsoft Office 365.
-              </li>
+                Design patterns and principles
+              </li>             
             </ul>
           </div>
           <div class="hero-img-box">
@@ -194,46 +185,45 @@
           <h2 class="secondary-heading">Work History</h2>
           <div class="card-container">
             <div class="card">
-              <span class="work-year">2007 - 03/2020</span>
-              <h3 class="tertiary-heading title-color">The Artful Dodger</h3>
-              <p class="work-job">Kitchen Staff</p>
-              <ul class="work-list">
-                <li>
-                  Food preparation to assist the cook to speed up the completion
-                  of customer orders.
-                </li>
-                <li>Covered the cook when they took a break.</li>
-                <li>Served food to customers in a timely manner.</li>
-                <li>
-                  Communicated any delays to waiting staff so they could inform
-                  customers.
-                </li>
-                <li>
-                  Kept work area clean and tidy to comply with health and
-                  hygiene.
-                </li>
-                <li>
-                  Checked stock on delivery to ensure correct stock was
-                  delivered.
-                </li>
-              </ul>
-            </div>
-            <div class="card">
               <span class="work-year">05/2021 - Present</span>
               <h3 class="tertiary-heading title-color">The Front Parlour</h3>
               <p class="work-job">Kitchen Staff</p>
               <ul class="work-list">
                 <li>
-                  Food preparation to assist the cook to speed up the completion
-                  of customer orders.
+                  Kitchen was kept clean to comply with health and hygiene standards.
                 </li>
-                <li>Served food to customers in a timely manner.</li>
+                <li>Productive team worker within a busy catering environment.</li>
+                <li>Completes tasks with minimum supervision.</li>
                 <li>
-                  Kept work area clean and tidy to comply with health and
-                  hygiene.
+                  Excellent at maintaining strong levels of communication between customers and staff.
+                </li>               
+                <li>
+                  Served customers and dealt with any questions or issues.
                 </li>
               </ul>
             </div>
+            <div class="card">
+              <span class="work-year">2007 - 03/2020</span>
+              <h3 class="tertiary-heading title-color">The Artful Dodger</h3>
+              <p class="work-job">Kitchen Staff</p>
+              <ul class="work-list">
+                <li>
+                  Kitchen was kept clean to comply with health and hygiene standards.
+                </li>
+                <li>Productive team worker within a busy catering environment.</li>
+                <li>Completes tasks with minimum supervision.</li>
+                <li>
+                  Excellent at maintaining strong levels of communication between customers and staff.
+                </li>
+                <li>
+                  Managed stock deliveries to ensure correct stock was delivered and stored correctly.
+                </li>
+                <li>
+                  Managed refuse collections and organised general and recyclable waste.
+                </li>
+              </ul>
+            </div>
+            
           </div>
         </div>
       </section>
